--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <li class="top-block__list-item">Дружим с детьми с 2007 года</li>
                             <li class="top-block__list-item">Возможность оплаты маткапиталом</li>
                             <li class="top-block__list-item">До 12 человек в группе в детских садах</li>
-                            <li class="top-block__list-item">Лицензия на образовательную деятельность</li>
+                            <li class="top-block__list-item">Лицензированные детские сады</li>
                             <li class="top-block__list-item">Реджио-подход</li>
                         </ul>
                         <div class="top-block__links">
@@ -125,7 +125,20 @@
                             <a href="" class="top-block__link">записаться <br> в центр развития</a>
                         </div>
                     </div>
+                    <div class="top-block__right-content">
+                        <div class="top-block__title"> частные детские сады. <br> центр развития. <br> «семь звёзд» <div
+                            class="top-block__location">
+                            <div class="top-block__location-img"><svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M12 2C7.582 2 4 5.35813 4 9.5C4 11.1309 4.57033 12.6275 5.51833 13.8531C5.53533 13.8825 5.538 13.9153 5.55733 13.9434L10.8907 21.4434C11.138 21.7913 11.5547 22 12 22C12.4453 22 12.862 21.7913 13.1093 21.4434L18.4427 13.9434C18.4623 13.9153 18.4647 13.8825 18.4817 13.8531C19.4297 12.6275 20 11.1309 20 9.5C20 5.35813 16.418 2 12 2ZM12 12C10.5273 12 9.33333 10.8806 9.33333 9.5C9.33333 8.11937 10.5273 7 12 7C13.4727 7 14.6667 8.11937 14.6667 9.5C14.6667 10.8806 13.4727 12 12 12Z"
+                                        fill="black" />
+                                </svg>
+                            </div> <span class="top-block__location-text"> В Иркутске</span>
+                        </div>
+                    </div>
                     <div class="top-block__wrap-img"></div>
+                    </div>
                 </div>
                 <img src="./assets/images/pages/main/background/cones-7.png" alt="" class="top-block__background-img">
             </section>
@@ -829,6 +842,7 @@
                           <div id="collapseOne" class="accordion-collapse why-choose-us__accordion-collapse collapse show" data-bs-parent="#accordionExample">
                             <div class="accordion-body why-choose-us__accordion-body">
                                 <span class="accordion-button-title why-choose-us__accordion-button-title"></span>
+                                <span class="accordion-button-text why-choose-us__accordion-button-text-mobile">Образовательная деятельность в наших садах составлена в соответствии с ФГОС и программы дошкольного образования «Вдохновение». Наша организация имеет все необходимые документы.</span>
                                 <div class="why-choose-us__accordion-body-img-wrap">
                                     <img src="./assets/images/pages/main/why-choose-us/accordion-img.jpg" alt="" class="why-choose-us__accordion-body-img">
                                 </div>
@@ -845,6 +859,7 @@
                           <div id="collapseTwo" class="accordion-collapse why-choose-us__accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body why-choose-us__accordion-body">
                                 <span class="accordion-button-title why-choose-us__accordion-button-title"></span>
+                                <span class="accordion-button-text why-choose-us__accordion-button-text-mobile">Образовательная деятельность в наших садах составлена в соответствии с ФГОС и программы дошкольного образования «Вдохновение». Наша организация имеет все необходимые документы.</span>
                                 <div class="why-choose-us__accordion-body-img-wrap">
                                     <img src="./assets/images/pages/main/why-choose-us/accordion-img.jpg" alt="" class="why-choose-us__accordion-body-img">
                                 </div>
@@ -861,6 +876,7 @@
                           <div id="collapseThree" class="accordion-collapse why-choose-us__accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body why-choose-us__accordion-body">
                                 <span class="accordion-button-title why-choose-us__accordion-button-title"></span>
+                                <span class="accordion-button-text why-choose-us__accordion-button-text-mobile">Образовательная деятельность в наших садах составлена в соответствии с ФГОС и программы дошкольного образования «Вдохновение». Наша организация имеет все необходимые документы.</span>
                                 <div class="why-choose-us__accordion-body-img-wrap">
                                     <img src="./assets/images/pages/main/why-choose-us/accordion-img.jpg" alt="" class="why-choose-us__accordion-body-img">
                                 </div>
@@ -877,6 +893,7 @@
                           <div id="collapseFour" class="accordion-collapse why-choose-us__accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body why-choose-us__accordion-body">
                                 <span class="accordion-button-title why-choose-us__accordion-button-title"></span>
+                                <span class="accordion-button-text why-choose-us__accordion-button-text-mobile">Образовательная деятельность в наших садах составлена в соответствии с ФГОС и программы дошкольного образования «Вдохновение». Наша организация имеет все необходимые документы.</span>
                                 <div class="why-choose-us__accordion-body-img-wrap">
                                     <img src="./assets/images/pages/main/why-choose-us/accordion-img.jpg" alt="" class="why-choose-us__accordion-body-img">
                                 </div>
@@ -893,6 +910,7 @@
                           <div id="collapseFive" class="accordion-collapse why-choose-us__accordion-collapse collapse" data-bs-parent="#accordionExample">
                             <div class="accordion-body why-choose-us__accordion-body">
                                 <span class="accordion-button-title why-choose-us__accordion-button-title"></span>
+                                <span class="accordion-button-text why-choose-us__accordion-button-text-mobile">Образовательная деятельность в наших садах составлена в соответствии с ФГОС и программы дошкольного образования «Вдохновение». Наша организация имеет все необходимые документы.</span>
                                 <div class="why-choose-us__accordion-body-img-wrap">
                                     <img src="./assets/images/pages/main/reviews/video.jpg" alt="" class="why-choose-us__accordion-body-img">
                                 </div>
