--- a/index.html
+++ b/index.html
@@ -178,48 +178,48 @@
         <div class="my-overlay" id="burger-menu-overlay"></div>
 
         <main class="main">
-            <section class="top-block main__top-block">
-                <div class="my-container top-block__container">
-                    <div class="top-block__body">
-                        <div class="top-block__title"> частные детские сады. <br> центр развития. <br> «семь звёзд» <div
-                                class="top-block__location">
-                                <div class="top-block__location-img"><svg width="24" height="24" viewBox="0 0 24 24"
+            <section class="hero-section main__hero-section">
+                <div class="my-container hero-section__container">
+                    <div class="hero-section__body">
+                        <div class="hero-section__title"> частные детские сады. <br> центр развития. <br> «семь звёзд» <div
+                                class="hero-section__location">
+                                <div class="hero-section__location-img"><svg width="24" height="24" viewBox="0 0 24 24"
                                         fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path
                                             d="M12 2C7.582 2 4 5.35813 4 9.5C4 11.1309 4.57033 12.6275 5.51833 13.8531C5.53533 13.8825 5.538 13.9153 5.55733 13.9434L10.8907 21.4434C11.138 21.7913 11.5547 22 12 22C12.4453 22 12.862 21.7913 13.1093 21.4434L18.4427 13.9434C18.4623 13.9153 18.4647 13.8825 18.4817 13.8531C19.4297 12.6275 20 11.1309 20 9.5C20 5.35813 16.418 2 12 2ZM12 12C10.5273 12 9.33333 10.8806 9.33333 9.5C9.33333 8.11937 10.5273 7 12 7C13.4727 7 14.6667 8.11937 14.6667 9.5C14.6667 10.8806 13.4727 12 12 12Z"
                                             fill="black" />
                                     </svg>
-                                </div> <span class="top-block__location-text"> В Иркутске</span>
+                                </div> <span class="hero-section__location-text"> В Иркутске</span>
                             </div>
                         </div>
-                        <ul class="top-block__list">
-                            <li class="top-block__list-item">Дружим с детьми с 2007 года</li>
-                            <li class="top-block__list-item">Возможность оплаты маткапиталом</li>
-                            <li class="top-block__list-item">До 12 человек в группе в детских садах</li>
-                            <li class="top-block__list-item">Лицензированные детские сады</li>
-                            <li class="top-block__list-item">Реджио-подход</li>
+                        <ul class="hero-section__list">
+                            <li class="hero-section__list-item">Дружим с детьми с 2007 года</li>
+                            <li class="hero-section__list-item">Возможность оплаты маткапиталом</li>
+                            <li class="hero-section__list-item">До 12 человек в группе в детских садах</li>
+                            <li class="hero-section__list-item">Лицензированные детские сады</li>
+                            <li class="hero-section__list-item">Реджио-подход</li>
                         </ul>
-                        <div class="top-block__links">
-                            <a href="" class="top-block__link active">экскурсия <br> в детский сад</a>
-                            <a href="" class="top-block__link">записаться <br> в центр развития</a>
+                        <div class="hero-section__links">
+                            <a href="" class="hero-section__link active">экскурсия <br> в детский сад</a>
+                            <a href="" class="hero-section__link">записаться <br> в центр развития</a>
                         </div>
                     </div>
-                    <div class="top-block__right-content">
-                        <div class="top-block__title"> частные детские сады. <br> центр развития. <br> «семь звёзд» <div
-                                class="top-block__location">
-                                <div class="top-block__location-img"><svg width="24" height="24" viewBox="0 0 24 24"
+                    <div class="hero-section__right-content">
+                        <div class="hero-section__title"> частные детские сады. <br> центр развития. <br> «семь звёзд» <div
+                                class="hero-section__location">
+                                <div class="hero-section__location-img"><svg width="24" height="24" viewBox="0 0 24 24"
                                         fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path
                                             d="M12 2C7.582 2 4 5.35813 4 9.5C4 11.1309 4.57033 12.6275 5.51833 13.8531C5.53533 13.8825 5.538 13.9153 5.55733 13.9434L10.8907 21.4434C11.138 21.7913 11.5547 22 12 22C12.4453 22 12.862 21.7913 13.1093 21.4434L18.4427 13.9434C18.4623 13.9153 18.4647 13.8825 18.4817 13.8531C19.4297 12.6275 20 11.1309 20 9.5C20 5.35813 16.418 2 12 2ZM12 12C10.5273 12 9.33333 10.8806 9.33333 9.5C9.33333 8.11937 10.5273 7 12 7C13.4727 7 14.6667 8.11937 14.6667 9.5C14.6667 10.8806 13.4727 12 12 12Z"
                                             fill="black" />
                                     </svg>
-                                </div> <span class="top-block__location-text"> В Иркутске</span>
+                                </div> <span class="hero-section__location-text"> В Иркутске</span>
                             </div>
                         </div>
-                        <div class="top-block__wrap-img"></div>
+                        <div class="hero-section__wrap-img"></div>
                     </div>
                 </div>
-                <img src="./assets/images/pages/main/background/cones-7.png" alt="" class="top-block__background-img">
+                <img src="./assets/images/pages/main/background/cones-7.png" alt="" class="hero-section__background-img">
             </section>
             <section class="branches main__branches">
                 <div class="my-container branches__container">
